--- a/CrawlManager/templates/base.html
+++ b/CrawlManager/templates/base.html
@@ -19,7 +19,7 @@
                 <ul class="nav nav-sidebar">                   
                     <li><a href="#">采集任务</a></li>
                     <li><a href="#">爬虫</a></li>
-                    <li><a class="active" href="#">项目管理</a></li>
+                    <li><a class="active" href="{% url 'CrawlProject:ProjectList' %}">项目管理</a></li>
                 </ul>
             </div>
             <div class="col-md-10 col-md-offset-2">
@@ -45,10 +45,7 @@
                 </div>  
             </div> 
         </div>
-    </div>
-    
-        
-     
+    </div>   
 </div>
 
 <script src="{% static 'js/jquery.js' %}"></script>
