--- a/CrawlManager/templates/base.html
+++ b/CrawlManager/templates/base.html
@@ -50,5 +50,7 @@
 
 <script src="{% static 'js/jquery.js' %}"></script>
 <script src="{% static 'js/bootstrap/bootstrap.js' %}"></script>
+{% block jsfile %}{% endblock jsfile %}
+{% block javascript %}{% endblock javascript %}
 </body>
 </html>
