--- a/CrawlManager/static/css/project.css
+++ b/CrawlManager/static/css/project.css
@@ -3,3 +3,26 @@
     margin-left: 20px;
     padding: 20px;
 }
+
+
+
+.table>tbody>tr>td, .table>thead>tr>th, .table>thead>tr, .table {
+    border:0px;
+}
+
+.table>tbody>tr>td {
+    padding: 14px;
+}
+
+.table>tbody>tr:nth-child(odd) {
+    background-color:#fff;
+}
+
+.table>tbody>tr:nth-child(even) {
+    background-color:#f2f8f9;
+}
+
+.thead-light {
+    background-color: #1bc6d7;
+    color: #fff;
+}
