--- a/CrawlManager/templates/CrawlProject/ProjectList.html
+++ b/CrawlManager/templates/CrawlProject/ProjectList.html
@@ -6,9 +6,52 @@
 <link href="{% static 'css/project.css' %}" rel="stylesheet" type="text/css">  
 {% endblock css %} 
 {% block content %}
+<!-- 新建项目模态框 -->
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="addProject" aria-hidden="true" id="newProject">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addProject">新建项目</h5>
+                <button class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group" style="display: none;">
+                        <label for="id">id</label>
+                        <input id="id" class="form-control" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="project_name">项目名称</label>
+                        <input id="project_name" class="form-control" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="code">项目编码</label>
+                        <input id="code" class="form-control" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="describe">项目描述</label>
+                        <textarea id="describe" class="form-control"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary" id="save">保存</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="col-md-8 project">
+    <div id="toolbar">
+        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newProject">新建爬虫项目</button>
+    </div>
     <table id="project-list"></table>
 </div>
+
+
 
 {% endblock content %}
 
@@ -19,8 +62,28 @@
 
 {% block javascript %}
 <script>
+    
     $(document).ready(function(){
         ProjectListTable();
     })
+
+    $('#save').click(function(){
+        var data = {
+            "id": $('#id').val(),
+            "project_name": $('#project_name').val(),
+            "code": $('#code').val(),
+            "describe": $('#describe').val()
+        }
+        $.ajax({
+            type: "POST",
+            url: "/CrawlProject/CreateProject/",
+            data: data,
+            dataType: 'json',
+            success: function(result){
+                
+            }
+        })
+    })
+    
 </script>
 {% endblock javascript %}
